--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <body class="w3-light-grey">
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
   <div class="w3-row-padding">
-    <!-- Columna izquierda -->
     <div class="w3-third">  
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">         
    <div class="icon">
-   <img src="./img/avatar.png" id="icon_heart" alt="Mauricio Barzola">  
-   </div>
+   <img src="./img/avatar.png" id="icon_heart" style="width:100%" alt="Mauricio Barzola">  
+  </div>
   <div class="contenedor">               
   <h1>Mauricio Barzola.<span>&#160;</span></h1>
   </div>
@@ -94,9 +93,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
           <h5 class="w3-opacity"> <span class="w3-tag w3-teal w3-round">LOS DATOS DE LAS BARRAS DE PROGRESO NO SON DEL TODO REALES ; )</span></h5>
       </div><br>
-<!-- Fin de la columna izquierda -->
     </div>
-<!-- Columna derecha -->
    <div class="w3-twothird">    
       <div class="w3-container w3-card w3-white w3-margin-bottom">
 <div class="container__banner">
@@ -156,7 +153,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique temporibus necessitatibus minus nesciunt sint, nam nostrum? Suscipit facere dolores blanditiis! Quis esse nihil laboriosam accusamus in quo eveniet necessitatibus dolorum!</p><br>
         </div>
       </div>
-<!-- Columna final derecha -->
     </div>   
   </div>  
 </div>
